# MAF-MedImageParse-orchestrator

./: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  MedImageParse-Orchestrator-Reference.md  README.md  pyproject.toml  test_setup.py
docs/: DICOM_SOURCES.md  TCIA_DOWNLOAD_EXAMPLES.md
examples/: README.md  basic_usage.py  batch_processing.py
scripts/: generate_synthetic_dicoms.py  tcia_example_query.py
src/healthcare_orchestrator/: __init__.py  orchestrator.py
src/healthcare_orchestrator/agents/: __init__.py  integration.py  medimageparse.py  postprocessing.py  preprocessing.py  prompt_generator.py  report_generator.py  validation.py
src/healthcare_orchestrator/config/: __init__.py  settings.py
src/healthcare_orchestrator/models/: __init__.py  prompts.py  schemas.py
